@@ -69,62 +69,6 @@
 				</plugins>
 			</build>
 		</profile>
-		<profile>
-			<id>lite</id>
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-shade-plugin</artifactId>
-						<version>3.2.4</version>
-						<executions>
-							<execution>
-								<id>lite</id>
-								<phase>package</phase>
-								<goals>
-									<goal>shade</goal>
-								</goals>
-								<configuration>
-									<finalName>
-										Kustvakt-lite-${project.version}
-									</finalName>
-									<transformers>
-										<transformer
-											implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-											<mainClass>
-												de.ids_mannheim.korap.server.KustvaktLiteServer
-											</mainClass>
-										</transformer>
-										<transformer
-											implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-											<resource>META-INF/spring.handlers
-											</resource>
-										</transformer>
-										<transformer
-											implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-											<resource>META-INF/spring.schemas
-											</resource>
-										</transformer>
-									</transformers>
-									<!-- Additional configuration. apparently there is a security exception -->
-									<filters>
-										<filter>
-											<artifact>*:*</artifact>
-											<excludes>
-												<exclude>META-INF/*.SF</exclude>
-												<exclude>META-INF/*.DSA
-												</exclude>
-												<exclude>META-INF/*.RSA
-												</exclude>
-											</excludes>
-										</filter>
-									</filters>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
 	</profiles>
 	<build>
 		<!-- <resources> <resource> <directory>src/main/resources</directory> <filtering>true</filtering> 
